--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
                     <div class="hero-inner">
 						<div class="hero-copy">
 	                        <h1 class="hero-title mt-0 is-revealing">Landing template for OpenShift startup</h1>
-	                        <p class="hero-paragraph is-revealing">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim sapien, sodales sed fermentum eu, posuere rutrum ligula. Morbi ornare augue non ligula bibendum, quis placerat ex ornare.</p>
+	                        <p class="hero-paragraph is-revealing">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim sapien, sodales sed fermentum eu, posuere rutrum ligula.</p>
 							<div class="hero-form field field-grouped is-revealing">
 	                            <div class="control control-expanded">
 	                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
@@ -364,42 +364,6 @@
 										<li>Leave the defaults for the remaining fields &mdash; that's it!</li>
 									</ol>
 								</div>
-	                        </div>
-							<div class="feature">
-	                            <div class="feature-inner">
-									<div class="feature-header mb-16">
-										<div class="feature-icon mr-16">
-											<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-											    <g fill-rule="nonzero" fill="none">
-											        <path d="M4 12H0V5a5.006 5.006 0 0 1 5-5h7v4H5a1 1 0 0 0-1 1v7z" fill="#43F1FF"/>
-											        <path d="M32 12h-4V5a1 1 0 0 0-1-1h-7V0h7a5.006 5.006 0 0 1 5 5v7zM12 32H5a5.006 5.006 0 0 1-5-5v-7h4v7a1 1 0 0 0 1 1h7v4z" fill="#4353FF"/>
-											        <path d="M27 32h-7v-4h7a1 1 0 0 0 1-1v-7h4v7a5.006 5.006 0 0 1-5 5z" fill="#43F1FF"/>
-											    </g>
-											</svg>
-		                                </div>
-		                                <h4 class="feature-title m-0">Discover</h4>
-									</div>
-	                                <p class="text-sm mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim sapien, sodales sed fermentum eu, posuere rutrum ligula. Morbi ornare augue non ligula bibendum, quis placerat ex ornare.</p>
-	                            </div>
-	                        </div>
-							<div class="feature">
-	                            <div class="feature-inner">
-									<div class="feature-header mb-16">
-										<div class="feature-icon mr-16">
-											<svg width="32" height="32" xmlns="http://www.w3.org/2000/svg">
-											    <g fill="none" fill-rule="nonzero">
-											        <path d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4z" fill="#4353FF"/>
-											        <path d="M27 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4z" fill="#43F1FF"/>
-											        <path d="M27 12c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4z" fill="#4353FF"/>
-											        <path d="M5 23c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4z" fill="#43F1FF"/>
-											        <path d="M27 23c-1.859 0-3.41 1.28-3.858 3h-3.284A3.994 3.994 0 0 0 17 23.142v-3.284c1.72-.447 3-2 3-3.858 0-2.206-1.794-4-4-4-1.859 0-3.41 1.28-3.858 3H8.858A3.994 3.994 0 0 0 6 12.142V8.858c1.72-.447 3-2 3-3.858 0-2.206-1.794-4-4-4S1 2.794 1 5c0 1.858 1.28 3.41 3 3.858v3.284c-1.72.447-3 2-3 3.858 0 2.206 1.794 4 4 4 1.859 0 3.41-1.28 3.858-3h3.284A3.994 3.994 0 0 0 15 19.858v3.284c-1.72.447-3 2-3 3.858 0 2.206 1.794 4 4 4 1.859 0 3.41-1.28 3.858-3h3.284c.447 1.72 2 3 3.858 3 2.206 0 4-1.794 4-4s-1.794-4-4-4z" fill="#4353FF"/>
-											    </g>
-											</svg>
-		                                </div>
-		                                <h4 class="feature-title m-0">Discover</h4>
-									</div>
-	                                <p class="text-sm mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam enim sapien, sodales sed fermentum eu, posuere rutrum ligula. Morbi ornare augue non ligula bibendum, quis placerat ex ornare.</p>
-	                            </div>
 	                        </div>
 						</div>
                     </div>
